# trellis

./: .gitignore  404.html  AGENTS.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  sitemap.xml
.claude/: settings.local.json
.github/workflows/: ci.yml  publish.yml
data/: __init__.py  generate_dataset.py
debug/tools/: apply_segments_00011_28473c70.json  assemble_sections_00007_a052639c.json  compute_derived_00008_734e5372.json  export_00001_4c8d93b1.json  export_00002_fa66063f.json  extract_face_00001_bf411a07.json  extract_face_00002_e11d3b94.json  extract_face_00003_523e175c.json  extract_fields_00001_650de1a5.json  extract_fields_00002_b0c775b1.json  extract_fields_00003_0c34d539.json  extract_other_income_00007_6ab1b6a3.json  extract_other_income_00008_968cfaf7.json  extract_other_income_00009_75f66496.json  extract_per_share_00010_6670d5d4.json  extract_per_share_00011_a01b275c.json  extract_per_share_00012_0e5a415a.json  extract_segments_00004_c883e224.json  extract_segments_00005_ae432308.json  extract_segments_00006_862fc3d7.json  fetch_filings_00001_971968c8.json  fetch_filings_00002_320a7a1d.json  fetch_filings_00003_25df7b1f.json  finalize_00010_a8c28817.json  generate_analyst_notes_00004_a4224b9d.json  generate_metadata_00003_d4a858c7.json  ingest_filings_00003_2f3db8c1.json  ingest_manual_00002_d57d1a34.json  ingest_template_00001_c76f9154.json  llm_job_00001_79e1dfc5.json  llm_job_00002_6947881d.json  llm_job_00003_74cbeac7.json  produce_json_00001_d7935b55.json  produce_markdown_00002_fefbda81.json  re_extract_00001_842b04be.json  resolve_periods_00002_3d764d81.json  resolve_segment_names_00002_192e5873.json  resolve_ticker_00001_40c56f09.json  select_face_00001_d7582a26.json  select_face_00002_b12909f6.json  (+27 more)
development-index/: index.html
docs/: ARCHITECTURE.md  DESIGN.md  PIPELINE-DSL-V1.md  PIPELINE-DSL.md  PROJECT_STRUCTURE.md  changelog.md  development-index.md  extensibility-index.md  index.md  installation.md  interfaces-api.md  interfaces-cli.md  interfaces-mcp.md  operations-blackboard.md  operations-configuration.md  operations-execution.md  pipeline-dsl-v1.md  quickstart.md  security.md  support.md  tools-index.md  troubleshooting.md
docs/specifications/: PIPELINE-DSL.md  RETRIEVAL-SPEC.md
docs/tutorials/: bm25-section-extraction.md  compile-pipeline.md  export-results.md  index.md  pdf-ingest-extract.md  sec-field-extraction.md  web-search-summarize.md
examples/data/: capex_reconciliation_schema.json  income_statement_schema.json  spreading_manual_income_statement.md  spreading_template_income_statement.md
examples/pipelines/: async_demo.yaml  bm25_field_extraction.yaml  dependency_chain.yaml  extract_sec_field.yaml  fan_out.yaml  fetch_10k_parametrized.yaml  fetch_sec_filings.yaml  image_ocr_summarize.yaml  llm_summarize.yaml  meta_10k_workforce.yaml  pdf_summarize.yaml  pipeline_inputs.yaml  single_mock.yaml  web_search_investor_day.yaml
examples/pipelines/capex_reconciliation/: extraction.yaml  ingestion.yaml  plan.yaml  reconciliation.yaml
examples/pipelines/credit_dd/: README.md  pipeline_01_term_sheet.yaml  pipeline_02_financials.yaml  pipeline_03_obligor.yaml  pipeline_04_peers.yaml  pipeline_05_capstruct.yaml  pipeline_06_repayment.yaml  pipeline_07_proforma.yaml  pipeline_08_projections.yaml  pipeline_09_risks.yaml  pipeline_10_recommendation.yaml  pipeline_11_documents.yaml  pipeline_12_rating.yaml
examples/pipelines/spreads/: data_acquisition.yaml  discovery.yaml  extraction.yaml  output_generation.yaml  plan.yaml  session.json
extensibility-index/: index.html
installation/: index.html
interfaces-api/: index.html
operations-blackboard/: index.html
operations-configuration/: index.html
operations-execution/: index.html
outputs/: google_spreading_q1_2025.json  google_spreading_q1_2025.md
quickstart/: index.html
search/: search_index.json
security/: index.html
site/: index.html  sitemap.xml
site/PIPELINE-DSL/: index.html
site/changelog/: index.html
site/development-index/: index.html
site/installation/: index.html
site/interfaces-cli/: index.html
site/interfaces-mcp/: index.html
site/search/: search_index.json
site/specifications/ARCHITECTURE/: index.html
site/specifications/DESIGN/: index.html
site/specifications/PIPELINE-DSL/: index.html
site/specifications/RETRIEVAL-SPEC/: index.html
site/support/: index.html
site/tools-index/: index.html
site/tutorials/: index.html
site/tutorials/bm25-section-extraction/: index.html
site/tutorials/compile-pipeline/: index.html
site/tutorials/pdf-ingest-extract/: index.html
site/tutorials/sec-field-extraction/: index.html
specifications/ARCHITECTURE/: index.html
specifications/DESIGN/: index.html
specifications/PIPELINE-DSL/: index.html
stylesheets/: extra.css
support/: index.html
tests/: __init__.py  conftest.py
tests/debug/tools/: extract_fields_00001_321135b2.json  extract_fields_00002_b2f2dae1.json  extract_fields_00003_e4b68817.json  extract_fields_00004_51a4c985.json  (+19 more)
tools-index/: index.html
trellis/: config.py  exceptions.py
trellis/compiler/: __init__.py  catalog.py  compiler.py  exceptions.py  prompts.py  result.py
trellis/execution/: blackboard.py  dag.py  orchestrator.py  prefect_adapter.py  run_queue.py  template.py
trellis/models/: __init__.py  document.py  handles.py  pipeline.py  plan.py
trellis/registry/: __init__.py  credit_functions.py  finance_functions.py  functions.py  schema.py
trellis/retrieval/: __init__.py  bm25_index.py  chunker.py  fact_store.py  metadata.py  models.py  orchestrator.py  pipeline.py  plugins.py  reranker.py  rrf.py  vector_index.py
trellis/tools/: __init__.py  base.py  decorators.py  registry.py
trellis/validation/: contract.py  graph.py
trellis_api/: __init__.py  main.py  schemas.py
trellis_api/routers/: __init__.py  pipelines.py  plans.py
trellis_cli/: __init__.py  main.py
trellis_mcp/: __init__.py
troubleshooting/: index.html
tutorials/: index.html
tutorials/export-results/: index.html
tutorials/web-search-summarize/: index.html
(+51 files in other folders)
