[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trellis"
version = "0.1.0"
description = "An agentic solution for pipeline planning and execution within controlled environments"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Trellis Contributors"}
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "fastapi>=0.104",
    "uvicorn>=0.24",
    "pyyaml>=6.0",
    "pytest>=9.0.2",
    "litellm>=1.0.0",
    "PyPDF2>=3.0.0",
    "pymupdf>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0",
    "isort>=5.12",
    "mypy>=1.0",
    "ruff>=0.1",
]
api = [
    "fastapi>=0.104",
    "uvicorn>=0.24",
]
cli = [
    "typer>=0.9",
    "rich>=13.0",
]
mcp = []

[project.scripts]
trellis = "trellis_cli.main:main"

[tool.setuptools]
packages = ["trellis", "trellis_api", "trellis_mcp", "trellis_cli", "data", "tests"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
